--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -2,10 +2,12 @@
   "name": "recipe-book-backend",
   "version": "1.0.0",
   "description": "Backend for Recipe Book application",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "npm install && npm run build"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -17,5 +19,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
+  },
+  "engines": {
+    "node": ">=18.x",
+    "npm": ">=9.x"
   }
 }
