--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -6,22 +6,20 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "vercel-build": "npm install && npm run build"
+    "build": "echo 'Build complete' && exit 0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "firebase-admin": "^11.5.0",
+    "firebase-admin": "^13.4.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^7.0.3"
+    "protobufjs": "^6.11.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^3.1.10"
   },
   "engines": {
-    "node": ">=18.x",
-    "npm": ">=9.x"
+    "node": ">=18.x"
   }
 }
